--- a/Student's Percentage Prediction Model.ipynb
+++ b/Student's Percentage Prediction Model.ipynb
@@ -171,7 +171,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Training the Algorithm"
+    "Testing the Algorithm"
    ],
    "metadata": {
     "collapsed": false
